# django-user-accounts

./: .coveragerc  .deepsource.toml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  makemigrations.py  manage.py  middleware.py  mkdocs.yml  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yaml
.tx/: config
account/: Command attempted to use minibuffer while in minibuffer  __init__.py  admin.py  auth_backends.py  callbacks.py  compat.py  conf.py  context_processors.py  decorators.py  fields.py  forms.py  hooks.py  language_list.py  languages.py  managers.py  middleware.py  mixins.py  models.py  receivers.py  services.py  signals.py  timezones.py  urls.py  utils.py  validators.py  views.py
account/locale/ar/LC_MESSAGES/: django.mo  django.po
account/locale/de/LC_MESSAGES/: django.mo  django.po
account/locale/en/LC_MESSAGES/: django.mo  django.po
account/locale/es/LC_MESSAGES/: django.mo  django.po
account/locale/fa_IR/LC_MESSAGES/: django.mo  django.po
account/locale/fr/LC_MESSAGES/: django.mo  django.po
account/locale/it/LC_MESSAGES/: django.mo  django.po
account/locale/ja/LC_MESSAGES/: django.mo  django.po
account/locale/nl/LC_MESSAGES/: django.mo  django.po
account/locale/pl/LC_MESSAGES/: django.mo  django.po
account/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
account/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
account/locale/ru/LC_MESSAGES/: django.mo  django.po
account/locale/sk_SK/LC_MESSAGES/: django.mo  django.po
account/locale/tr/LC_MESSAGES/: django.mo  django.po
account/locale/zh_CN/LC_MESSAGES/: django.mo  django.po
account/locale/zh_TW/LC_MESSAGES/: django.mo  django.po
account/management/commands/: create_signups.py  expunge_deleted.py  user_password_expiry.py  user_password_history.py
account/migrations/: 0001_initial.py  0002_fix_str.py  0002_unicode_strings.py  0003_passwordexpiry_passwordhistory.py  0004_auto_20160909_1235.py  0004_auto_20170416_1821.py  0004_password_history_meta.py  0005_auto_20181017_1133.py  0005_signupcode_username.py  0005_update_default_language.py  0006_alter_signupcode_max_uses.py  0007_alter_emailconfirmation_sent.py
account/templates/account/: invite_user.html
account/templatetags/: account_tags.py
account/tests/: __init__.py  settings.py  test_auth.py  test_commands.py  test_decorators.py  test_email_address.py  test_hooks.py  test_models.py  test_password.py  test_utils.py  test_views.py  urls.py
account/tests/templates/: site_base.html
account/tests/templates/account/email/: email_confirmation_message.html  email_confirmation_message.txt  password_reset.txt
docs/: Makefile  changelog.md  changelog.rst  commands.rst  conf.py  faq.md  faq.rst  index.rst  installation.md  installation.rst  migration.md  migration.rst  passwords.rst  settings.md  settings.rst  signals.md  signals.rst  templates.md  templates.rst  usage.md  usage.rst
tests/: settings.py  test_commands.py  test_password.py  test_views.py  urls.py
