[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "django-user-accounts"
authors = [
    "Pinax Team <team@pinaxproject.com>",
]
description = "a Django user account app"
readme = "README.md"
homepage = "http://github.com/pinax/django-user-accounts"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
version = "3.3.0"
packages = [
    {include = "account"},
]

[tool.poetry.dependencies]
python = ">=3.8"
Django = ">=3.2"
django-appconf = ">=1.0.4"
pytz = ">=2020.4"

[tool.isort]
profile = "hug"
src_paths = ["account"]
multi_line_output = 3
known_django = "django"
known_third_party = "account,six,mock,appconf,jsonfield,pytz"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_glob = "account/migrations/*,docs"
include_trailing_comma = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"account/migrations/**.py" = ["E501"]
