[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE = tests.settings

[metadata]
name = django-user-accounts
version = 3.2.1
author = Pinax Team
author_email = team@pinaxproject.com
description = a Django user account app
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = http://github.com/pinax/django-user-accounts
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = .
packages = find:
include_package_data = True
install_requires =
    Django>=2.2
    django-appconf>=1.0.4
    pytz>=2020.4
zip_safe = False

[options.packages.find]
where = .

[options.package_data]
account = locale/*/LC_MESSAGES/*
